--- a/jquery.humanize.css
+++ b/jquery.humanize.css
@@ -1,23 +1,26 @@
 .feedback {
-  display: block;
-  position: fixed;
-  top: 100px;
-  left: 25%;
-  width: 43%;
-  z-index: 100000;
-	padding: .75em;
-	font-size: 28px;
-  color: #fff;
-	background: #000;
-  text-align: center; 
-	text-shadow: #333 -1px -1px 1px;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border: 2px solid #000;
+ 	font-size: 2.8em;
+ 	position: absolute;
+ 	left: 25%;
+  width: 50%;
+ 	top: 100px;
+ 	left: 25%;
+ 	width: 43%;
+ 	padding: .75em;
+ 	color: white;
+ 	background: #000;
+ 	text-align: center;
+ 	z-index: 100000;
+ 	text-shadow: #333 -1px -1px 1px;
+ 	-moz-border-radius: 8px;
+ 	-webkit-border-radius: 8px;
+ 	border: 2px solid #000;
 }
+
 .positive {
-	border: 2px solid #00ff00;
+ 	border: 2px solid #00ff00;
 }
+
 .negative {
-	border: 2px solid #ff0000;
+ 	border: 2px solid #ff0000;
 }
